db-cluster/users/k8s-cluster2/ns-porkeat-c18c6214/adfea-6bd8151d/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adfea-6bd8151d-tcp
  namespace: ns-porkeat-c18c6214
spec:
  entryPoints:
  - postgresql
  routes:
  - match: 'HostSNI(`adfea.seang.shop`) '
    services:
    - name: adfea-6bd8151d-postgresql-rw
      port: 15435
  tls:
    passthrough: true
